<resources>
    <string name="app_name">KOC-OWI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="oil_well_integerated">Oil Well Integerated</string>
    <string name="po_string">Production Operation</string>
    <string name="operator">Operator</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name_empty_err_msg">Name can\'t be empty</string>
    <string name="username_empty_err_msg">Username can\'t be empty</string>
    <string name="email_empty_err_msg">Email can\'t be empty</string>
    <string name="phone_empty_err_msg">Phone can\'t be empty</string>
    <string name="password_empty_err_msg">Password can\'t be empty</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Sign UP</string>
    <string name="title_activity_wells_location_google_map">Map</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
</resources>
